syntax = "proto3";

package account.v1;
option go_package="account/v1;accountv1";

service AccountService {
  // 入账
  rpc Credit(CreditRequest) returns(CreditResponse);
}

message CreditRequest {
  // 什么业务 + 去重
  string biz = 1;
  int64 biz_id = 2;

  // 每一个利益相关方分多少钱
  repeated CreditItem items = 3;
}

message CreditItem {
  int64 account =1;
  AccountType account_type = 2;
  int64 amt = 3;
  string currency = 4;
  // 平台账号咩有 uid
  int64 uid = 5;
}

message CreditResponse {

}


enum AccountType {
  AccountTypeUnknown = 0;
  // 个人赞赏账号
  AccountTypeReward = 1;
  // 平台分成账号
  AccountTypeSystem = 2;
}